@@ -36,6 +36,7 @@ o add Mcast[Snd|Rcv]SocketBuffer clauses to tune multicast socket buffers
 o add missing string.h required by strdup in config parsing
 o add eventfd emulation to communicate receiver -> sender
 o add best effort replication protocol (aka NOTRACK)
+o rework the HELLO logic inside FT-FW
 
 version 0.9.6 (2008/03/08)
 ------------------------------
